# loss-basins

./: .gitignore  README.md  backlog.md  notes.md  pyproject.toml  test.txt
experiments/: Pseudo-concavity.py  basin_measurement.py
jobs/cifar-double-descent/: cifar_double_descent.py  cifar_double_descent_old.py  load_saved_model.py  upload.py
jobs/example-job/: example_job.py
jobs/train-many/: run-on-lambda.sh  train_many.py
loss_basins/: data.py
loss_basins/callbacks/: __init__.py  copy_to_gcs.py  save_model_state.py
loss_basins/models/: __init__.py  cifar_conv.py  experimentation_mixin.py  frozen_mixin.py  frozen_modules.py  lightning.py  mnist_conv.py  model_base.py  model_wrapper.py  resnet.py
loss_basins/training/: __init__.py  training.py  training_test.py
loss_basins/training_jobs/: cifar_double_descent_job.py  example_training_job.py  training_job.py  training_job_test.py
loss_basins/utils/: __init__.py  experimentation_mixin.py  experimentation_mixin_test.py  freezable_module.py  freezable_module_test.py  gcs.py  gcs_test.py  utils.py  utils_test.py
notebooks/: cifar_conv.ipynb  mnist_conv.ipynb
notebooks/.ipynb_checkpoints/: mnist_conv-checkpoint.ipynb
scripts/: load_model.py  save_model.py  train_mnist.py  train_perturbation.py
